[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nestai"
version = "1.0.0"
description = "NestAI – Secure Multi-Agent Code Security & Generation Pipeline"
authors = [
    { name="Gad", email="your-email@example.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

dependencies = [
    "rich>=13.0",
    "openai>=1.0.0",
    "httpx",
    "pydantic",
]

# IMPORTANT — include your package folder
[tool.setuptools]
packages = ["nestai"]

# Entry point for CLI command
[project.scripts]
nestai = "nestai.cli:main"

